# TkSteal

./: ACKS.TkSteal  Bugs.TkSteal  COPYRIGHT  Makefile.in  PATCHLEVEL  README.md  TODO.TkSteal  Version  config.guess  config.init  config.local  config.sep  configure  configure.in  paper.ps  tk-app-hooks.el  tk-comm.el  tk-funcs.el  tkemacs.el
demo.TkSteal/: tkEmacs1.tcl  tkEmacs2.tcl  tkEmacs3.tcl  tkSteal1.tcl  tkSteal2.tcl  tkSteal3.tcl  tkSteal4.tcl  windowTree.tcl  wishrc  xtermwish.sh
doc/: tkEmacs.n  tkSteal.n  xaccess.n
libTkSteal/: Makefile.in  tkXAccess.c
tkemacs/: tkemacs.sh  tkemacs.tcl  tkemacsc.sh
wish/: Makefile.in  tkAppInit.c
